test/corpus/beast.txt
================================================================================
Nested elements and control flow
================================================================================

.card
  .header
    h1 Welcome, #{user.name}
  .body
    if user.isAdmin
      AdminPanel(userId={user.id})
    elseif user.isGuest
      | Guest account
    else
      each message, i in messages
        li.message(key={message.id}) #{message.text}

--------------------------------------------------------------------------------

(source_file
  (element
    (selector
      (class_selector
        (css_name)))
    (block
      (element
        (selector
          (class_selector
            (css_name)))
        (block
          (element
            (selector
              (tag_name))
            (text_content
              (text_fragment)
              (interpolation
                (expression_body
                  (expression_fragment)))))))
      (element
        (selector
          (class_selector
            (css_name)))
        (block
          (if_statement
            (if_clause
              (continued_line_expression
                (line_expression))
              (block
                (element
                  (selector
                    (component_name))
                  (attributes
                    (attribute
                      (attribute_name)
                      (expression
                        (expression_body
                          (expression_fragment))))))))
            (elseif_clause
              (continued_line_expression
                (line_expression))
              (block
                (text_line
                  (text_content
                    (text_fragment)))))
            (else_clause
              (block
                (each_statement
                  (identifier)
                  (identifier)
                  (continued_each_iterable
                    (line_expression))
                  (block
                    (element
                      (selector
                        (tag_name)
                        (class_selector
                          (css_name)))
                      (attributes
                        (attribute
                          (attribute_name)
                          (expression
                            (expression_body
                              (expression_fragment)))))
                      (text_content
                        (interpolation
                          (expression_body
                            (expression_fragment)))))))))))))))

================================================================================
Comments and blank lines
================================================================================

// before
main

  // inside
  span After comment

// after

--------------------------------------------------------------------------------

(source_file
  (comment)
  (element
    (selector
      (tag_name))
    (block
      (comment)
      (element
        (selector
          (tag_name))
        (text_content
          (text_fragment)))))
  (comment))

================================================================================
Attributes and balanced expressions
================================================================================

button(title="say \"hi\"" data-id="row-1" aria-label='Row') Click
p Object #{format({ nested: { ok: true }, text: "}" })}
p Template #{`hello ${name} }`}
p Comment #{value /* } is not a delimiter */ + 1}
p Regex #{/}/.test(value)}
p Return regex #{(() => { return /}/.test(value) })()}
p Division #{value / fn({ x: 1 }) / divisor}
div(onClick={() => {}} empty={{}}) Empty braces

--------------------------------------------------------------------------------

(source_file
  (element
    (selector
      (tag_name))
    (attributes
      (attribute
        (attribute_name)
        (string
          (escape_sequence)
          (escape_sequence)))
      (attribute
        (attribute_name)
        (string))
      (attribute
        (attribute_name)
        (string)))
    (text_content
      (text_fragment)))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (interpolation
        (expression_body
          (expression_fragment)))))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (interpolation
        (expression_body
          (expression_fragment)))))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (interpolation
        (expression_body
          (expression_fragment)))))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (interpolation
        (expression_body
          (expression_fragment)))))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (interpolation
        (expression_body
          (expression_fragment)))))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (interpolation
        (expression_body
          (expression_fragment)))))
  (element
    (selector
      (tag_name))
    (attributes
      (attribute
        (attribute_name)
        (expression
          (expression_body
            (expression_fragment))))
      (attribute
        (attribute_name)
        (expression
          (expression_body
            (expression_fragment)))))
    (text_content
      (text_fragment))))

================================================================================
Selectors and explicit text
================================================================================

App#root.shell(enabled)
  #content.main-pane
    | Plain text #{value}

--------------------------------------------------------------------------------

(source_file
  (element
    (selector
      (component_name)
      (id_selector
        (css_name))
      (class_selector
        (css_name)))
    (attributes
      (attribute
        (attribute_name)))
    (block
      (element
        (selector
          (id_selector
            (css_name))
          (class_selector
            (css_name)))
        (block
          (text_line
            (text_content
              (text_fragment)
              (interpolation
                (expression_body
                  (expression_fragment))))))))))

================================================================================
Compiler declarations and Octane control flow
================================================================================

import type { View } from "./types.ts";
module
  interface Props { items: View[] }
  const fallback = "none";
component EmptyState
  props { label }: { label: string }
  setup const message = label.toUpperCase();
  p #{message}
props { items, status, resource }: Props & { status: string; resource: Promise<View> }
setup const visibleItems = items.filter((item) => item.visible);
Theme.Provider(value={status})
  each item, index in visibleItems key item.id
    Card.featured(data-index={index}) #{item.label}
  empty
    EmptyState(label={fallback})
  each option in " key ".split(" ") key option
    span #{option}
  switch status
    case "ready"
      ReadyView
    default
      UnknownView
  try
    AsyncView(resource={resource})
  pending
    p Loading
  catch (error, reset)
    button(onClick={reset}) #{String(error)}

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (continued_line_expression
      (line_expression)))
  (module_declaration
    (source_block
      (source_statement
        (continued_source_code
          (source_code)))
      (source_statement
        (continued_source_code
          (source_code)))))
  (component_declaration
    (component_name)
    (component_block
      (props_declaration
        (continued_line_expression
          (line_expression)))
      (setup_declaration
        (continued_source_code
          (source_code)))
      (element
        (selector
          (tag_name))
        (text_content
          (interpolation
            (expression_body
              (expression_fragment)))))))
  (props_declaration
    (continued_line_expression
      (line_expression)))
  (setup_declaration
    (continued_source_code
      (source_code)))
  (element
    (selector
      (component_name)
      (component_member
        (component_member_name)))
    (attributes
      (attribute
        (attribute_name)
        (expression
          (expression_body
            (expression_fragment)))))
    (block
      (each_statement
        (identifier)
        (identifier)
        (continued_each_iterable
          (line_expression))
        (continued_line_expression
          (line_expression))
        (block
          (element
            (selector
              (component_name)
              (class_selector
                (css_name)))
            (attributes
              (attribute
                (attribute_name)
                (expression
                  (expression_body
                    (expression_fragment)))))
            (text_content
              (interpolation
                (expression_body
                  (expression_fragment))))))
        (empty_clause
          (block
            (element
              (selector
                (component_name))
              (attributes
                (attribute
                  (attribute_name)
                  (expression
                    (expression_body
                      (expression_fragment)))))))))
      (each_statement
        (identifier)
        (continued_each_iterable
          (line_expression))
        (continued_line_expression
          (line_expression))
        (block
          (element
            (selector
              (tag_name))
            (text_content
              (interpolation
                (expression_body
                  (expression_fragment)))))))
      (switch_statement
        (continued_line_expression
          (line_expression))
        (switch_block
          (case_clause
            (continued_line_expression
              (line_expression))
            (block
              (element
                (selector
                  (component_name)))))
          (default_clause
            (block
              (element
                (selector
                  (component_name)))))))
      (try_statement
        (try_clause
          (block
            (element
              (selector
                (component_name))
              (attributes
                (attribute
                  (attribute_name)
                  (expression
                    (expression_body
                      (expression_fragment))))))))
        (pending_clause
          (block
            (element
              (selector
                (tag_name))
              (text_content
                (text_fragment)))))
        (catch_clause
          (continued_line_expression
            (line_expression))
          (block
            (element
              (selector
                (tag_name))
              (attributes
                (attribute
                  (attribute_name)
                  (expression
                    (expression_body
                      (expression_fragment)))))
              (text_content
                (interpolation
                  (expression_body
                    (expression_fragment)))))))))))

================================================================================
Fragments, spread attributes, and scoped styles
================================================================================

fragment
  article.card(type="button", {...getProps({ tone: "bright" })}, disabled)
    h2 Styled card
  style
    .card {
      color: rebeccapurple;
    }

--------------------------------------------------------------------------------

(source_file
  (fragment_statement
    (block
      (element
        (selector
          (tag_name)
          (class_selector
            (css_name)))
        (attributes
          (attribute
            (attribute_name)
            (string))
          (spread_attribute
            (expression_body
              (expression_fragment)))
          (attribute
            (attribute_name)))
        (block
          (element
            (selector
              (tag_name))
            (text_content
              (text_fragment)))))
      (style_statement
        (style_block
          (style_source_statement
            (continued_style_source
              (style_source))
            (style_block
              (style_source_statement
                (continued_style_source
                  (style_source)))))
          (style_source_statement
            (continued_style_source
              (style_source))))))))

================================================================================
Continuation headers, sources, and embedded expressions
================================================================================

import {
  ~ Foo,
  ~ Bar
  ~ } from "./types"
setup const total = foo
  ~ + bar
Button(items={[
  ~ 0, 1, 2, 3
  ~ ]}
  ~ ) Save
if isReady
  ~ && hasPermission
  p Ready
if isEnabled
  // removed before continuation processing

  // also removed
  ~ && isAllowed
  p Allowed
each item in items
  ~ key item.id
  li #{item.label}
each item in items
  ~ .filter(Boolean)
  ~ key item
  ~ .id
  li #{item.label}

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (continued_line_expression
      (line_expression)
      (line_expression)
      (line_expression)
      (line_expression)))
  (setup_declaration
    (continued_source_code
      (source_code)
      (source_code)))
  (element
    (selector
      (component_name))
    (attributes
      (attribute
        (attribute_name)
        (expression
          (expression_body
            (expression_fragment)
            (expression_fragment)
            (expression_fragment)))))
    (text_content
      (text_fragment)))
  (if_statement
    (if_clause
      (continued_line_expression
        (line_expression)
        (line_expression))
      (block
        (element
          (selector
            (tag_name))
          (text_content
            (text_fragment))))))
  (if_statement
    (if_clause
      (continued_line_expression
        (line_expression)
        (line_expression))
      (block
        (element
          (selector
            (tag_name))
          (text_content
            (text_fragment))))))
  (each_statement
    (identifier)
    (continued_each_iterable
      (line_expression))
    (continued_line_expression
      (line_expression))
    (block
      (element
        (selector
          (tag_name))
        (text_content
          (interpolation
            (expression_body
              (expression_fragment)))))))
  (each_statement
    (identifier)
    (continued_each_iterable
      (line_expression)
      (line_expression))
    (continued_line_expression
      (line_expression)
      (line_expression))
    (block
      (element
        (selector
          (tag_name))
        (text_content
          (interpolation
            (expression_body
              (expression_fragment))))))))

================================================================================
Continuation no-ops, text, slash payloads, and token boundaries
================================================================================

div(className='')
  ~ // comment continuation
  ~
  p Still a child
Button(
  ~ tone="primary"
  ~ // ignored
  ~ disabled
  ~
  ~ ) Save
p path
  ~ /continued
p Hello
  // removed before continuation processing
  ~ world
if value
  ~ /x/.test(input)
  p Match
Button
  ~ (disabled) Save

--------------------------------------------------------------------------------

(source_file
  (element
    (selector
      (tag_name))
    (attributes
      (attribute
        (attribute_name)
        (string)))
    (block
      (element
        (selector
          (tag_name))
        (text_content
          (text_fragment)))))
  (element
    (selector
      (component_name))
    (attributes
      (attribute
        (attribute_name)
        (string))
      (attribute
        (attribute_name)))
    (text_content
      (text_fragment)))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (text_fragment)))
  (element
    (selector
      (tag_name))
    (text_content
      (text_fragment)
      (text_fragment)))
  (if_statement
    (if_clause
      (continued_line_expression
        (line_expression)
        (line_expression))
      (block
        (element
          (selector
            (tag_name))
          (text_content
            (text_fragment))))))
  (element
    (selector
      (component_name))
    (attributes
      (attribute
        (attribute_name)))
    (text_content
      (text_fragment))))

================================================================================
Continuation state inside expressions, templates, source, and styles
================================================================================

div(value={{
  ~ nested: {
  ~ ok: true
  ~ }
  ~ }})
p #{`hello
  ~ world`}
module
  const joined = foo
    ~ + bar;
style
  .continued {
    ~ color: red;
    ~ }

--------------------------------------------------------------------------------

(source_file
  (element
    (selector
      (tag_name))
    (attributes
      (attribute
        (attribute_name)
        (expression
          (expression_body
            (expression_fragment)
            (expression_fragment)
            (expression_fragment)
            (expression_fragment)
            (expression_fragment))))))
  (element
    (selector
      (tag_name))
    (text_content
      (interpolation
        (expression_body
          (expression_fragment)
          (expression_fragment)))))
  (module_declaration
    (source_block
      (source_statement
        (continued_source_code
          (source_code)
          (source_code)))))
  (style_statement
    (style_block
      (style_source_statement
        (continued_style_source
          (style_source)
          (style_source)
          (style_source))))))

================================================================================
Inline continuation markers remain errors
================================================================================

Button(~disabled)

--------------------------------------------------------------------------------

(source_file
  (element
    (selector
      (component_name))
    (attributes
      (ERROR
        (UNEXPECTED '~')
        (identifier)))))
